Add price chart for easy viewing of price history