@@ -14,6 +14,10 @@ import javafx.geometry.Pos;
 import javafx.scene.Cursor;
 import javafx.scene.Node;
 import javafx.scene.Scene;
+import javafx.scene.chart.CategoryAxis;
+import javafx.scene.chart.LineChart;
+import javafx.scene.chart.NumberAxis;
+import javafx.scene.chart.XYChart;
 import javafx.scene.control.*;
 import javafx.scene.control.ToggleButton;
 import javafx.scene.control.cell.CheckBoxListCell;
@@ -50,12 +54,8 @@ import java.util.function.Consumer;
 
 import static com.willtryon.pokecard.CardImportsIndex.globalCardVersion;
 import static com.willtryon.pokecard.CardImportsIndex.globalFirstEdition;
-import static com.willtryon.pokecard.PokeocrEnv.ocrDefaultCacheDir;
 import static com.willtryon.pokecard.TcgdbEnv.tcgdbDefaultCacheDir;
 import com.willtryon.pokecard.Config.Settings;
-import org.eclipse.jgit.api.Git;
-import org.eclipse.jgit.api.MergeResult;
-import org.eclipse.jgit.lib.ProgressMonitor;
 
 
 public final class App extends Application {
@@ -137,7 +137,7 @@ public final class App extends Application {
         return !s.kind().isValidValue(value);
     }
 
-    record AppContext(CardIndex cardDB, CardImportsIndex importDB, CardSearchRepo searchDB) {
+    record AppContext(CardIndex cardDB, CardImportsIndex importDB, CardSearchHelper searchDB) {
     }
 
     @Override
@@ -228,7 +228,7 @@ public final class App extends Application {
             Throwable ex = initTask.getException();
             statusLabel.textProperty().unbind();
             statusLabel.setText("Exception occurred:" + ex.getMessage());
-            ex.printStackTrace(); showError(ex);
+            logger.error(ex.getMessage()); showError(ex);
             System.exit(1);
         });
         Thread initThread = new Thread(initTask, "pokecard-init");
@@ -303,9 +303,7 @@ public final class App extends Application {
             HBox options =  new HBox(10, mcq, firstEdition);
             options.setAlignment(Pos.CENTER);
             Button start = new Button("Start");
-            start.setOnAction(event -> {
-                dialogStage.close();
-            });
+            start.setOnAction(event -> dialogStage.close());
             VBox setup = new VBox(10, instructions, options, start);
             setup.setAlignment(Pos.CENTER);
             setup.setSpacing(10);
@@ -414,7 +412,7 @@ public final class App extends Application {
             });
         }), 0, 1, TimeUnit.MINUTES);*/
         //isOrb = false;
-        backgroundServices services = new backgroundServices(this, settings);
+        new BackgroundServices(this, settings);
     }
 
     void syncPrices(ScanProgress progress) throws Exception {
@@ -469,27 +467,19 @@ public final class App extends Application {
         hash1Button.disableProperty().bind(Bindings.createBooleanBinding(
                 () -> currentImport() == null,
                 detailTabs.getSelectionModel().selectedItemProperty()));
-        hash1Button.setOnAction(event -> {
-            openSpreadSheetTab(currentImport(), "hash");
-        });
+        hash1Button.setOnAction(event -> openSpreadSheetTab(currentImport(), "hash"));
 
         cv1Button.disableProperty().bind(Bindings.createBooleanBinding(
                 () -> currentImport() == null,
                 detailTabs.getSelectionModel().selectedItemProperty()));
-        cv1Button.setOnAction(event -> {
-            openSpreadSheetTab(currentImport(), "orb");
-        });
+        cv1Button.setOnAction(event -> openSpreadSheetTab(currentImport(), "orb"));
 
         ocr1Button.disableProperty().bind(Bindings.createBooleanBinding(
                 () -> currentImport() == null,
                 detailTabs.getSelectionModel().selectedItemProperty()));
-        ocr1Button.setOnAction(event -> {
-            openSpreadSheetTab(currentImport(), "ocr");
-        });
+        ocr1Button.setOnAction(event -> openSpreadSheetTab(currentImport(), "ocr"));
 
-        imp1Button.setOnAction(event -> {
-            openSpreadSheetTab(null, "session");
-        });
+        imp1Button.setOnAction(event -> openSpreadSheetTab(null, "session"));
 
         Separator sep = new Separator();
 
@@ -501,9 +491,7 @@ public final class App extends Application {
         prop1Button.disableProperty().bind(Bindings.createBooleanBinding(
                 () -> currentImport() == null,
                 detailTabs.getSelectionModel().selectedItemProperty()));
-        prop1Button.setOnAction(event -> {
-            new ImportsProperties(mainStage, ctx, currentImport(), settings, this::revealCardInDatabase);
-        });
+        prop1Button.setOnAction(event -> new ImportsProperties(mainStage, ctx, currentImport(), settings, this::revealCardInDatabase));
 
         search1Button.disableProperty().bind(Bindings.createBooleanBinding(
                 () -> currentImport() == null,
@@ -612,7 +600,7 @@ public final class App extends Application {
             Stage aboutStage = new Stage();
             aboutStage.setTitle("About Pokecard");
             Label name = new Label("Pokecard");
-            Label version = new Label("Version 0.9.0.03");
+            Label version = new Label("Version 0.9.0.04");
             Label author = new Label("by willtryon");
             Button close = new Button("Close");
             VBox aboutLayout = new VBox(12, name, version, author, close);
@@ -720,7 +708,7 @@ public final class App extends Application {
         statusProgress.setOnMouseClicked(e -> toggleTaskPopOver());
         taskView.getTasks().addListener((ListChangeListener<Task<?>>) c -> {
             var live = taskView.getTasks();
-            statusTask.set(live.isEmpty() ? null : live.get(live.size() - 1));
+            statusTask.set(live.isEmpty() ? null : live.getLast());
         });
         Region spacer = new Region();
         HBox.setHgrow(spacer, Priority.ALWAYS);
@@ -749,7 +737,6 @@ public final class App extends Application {
                         Path q = i.imp().getQueryImage();
                         yield q == null ? "(unknown image)" : q.getFileName().toString();
                     }
-                    default -> throw new IllegalStateException("Unexpected value: " + node);
 
                 });
 
@@ -849,7 +836,7 @@ public final class App extends Application {
         if(!args.equals("session")) q = imp.getQueryImage();
         String key = "spreadsheet:" + (q == null ? String.valueOf(imp.hashCode()) : q.toString());
         if (focusExistingTab(key)) return;
-        String title = (q == null ? "Import" : q.getFileName().toString()) + " \u2013 ORB matches";
+        String title = (q == null ? "Import" : q.getFileName().toString()) + " – ORB matches";
         SpreadsheetView sv = buildSpreadsheet(imp, args);
         Tab tab = new Tab(title, sv);
         tab.setId(key);
@@ -862,13 +849,11 @@ public final class App extends Application {
             firstRun = false;
         }
 
-        Platform.runLater(() ->{
-            sv.setOnKeyPressed(event -> {
-                if(event.isShortcutDown() && event.getCode() == KeyCode.C) {
-                    sv.copyClipboard();
-                }
-            });
-        });
+        Platform.runLater(() -> sv.setOnKeyPressed(event -> {
+            if(event.isShortcutDown() && event.getCode() == KeyCode.C) {
+                sv.copyClipboard();
+            }
+        }));
 
     }
 
@@ -947,7 +932,7 @@ public final class App extends Application {
     }
 
 
-    private Node buildImportDetail(CardImports imp) {
+    Node buildImportDetail(CardImports imp) {
         HBox content = new HBox(10);
         content.setPadding(new Insets(16));
 
@@ -957,8 +942,9 @@ public final class App extends Application {
         ToggleButton hashList = new ToggleButton("Hash");
         ToggleButton orbList = new ToggleButton("ORB");
         ToggleButton ocrList = new ToggleButton("OCR");
+        ToggleButton priceChart = new ToggleButton("Price");
 
-        ToggleButton[] buttons = { overview, hashList, orbList, ocrList };
+        ToggleButton[] buttons = { overview, hashList, orbList, ocrList, priceChart};
 
         for(ToggleButton b : buttons){
             b.setToggleGroup(group);
@@ -1006,10 +992,11 @@ public final class App extends Application {
 
         Runnable updateLayout = () -> {
             imgStack.getChildren().clear();
-            if (!toggleMode.equals("default")) {
-                imgStack.getChildren().addAll(orbLabel, hashLabel, ocrLabel, images, new HBox(16, previous, count, next));
-            } else {
-                imgStack.getChildren().addAll(images);
+            switch (toggleMode) {
+                case "default" -> imgStack.getChildren().addAll(images);
+                case "price"   -> imgStack.getChildren().add(buildPriceChart(imp));
+                default        -> imgStack.getChildren().addAll(
+                        orbLabel, hashLabel, ocrLabel, images, new HBox(16, previous, count, next));
             }
         };
 
@@ -1017,16 +1004,62 @@ public final class App extends Application {
         hashList.setOnAction(e -> { toggleMode = "hash";    render.run(); updateLayout.run(); });
         orbList.setOnAction(e ->  { toggleMode = "orb";     render.run(); updateLayout.run(); });
         ocrList.setOnAction(e ->  { toggleMode = "ocr";      render.run(); updateLayout.run(); });
+        priceChart.setOnAction(e ->  { toggleMode = "price";      render.run(); updateLayout.run(); });
+
 
         render.run();
         updateLayout.run(); // initial layout, replacing your old one-off if/else at the bottom
 
-        HBox bar = new HBox(10, overview, hashList, orbList, ocrList);
+        HBox bar = new HBox(10, overview, hashList, orbList, ocrList, priceChart);
         bar.setAlignment(Pos.CENTER);
         bar.setPadding(new Insets(10));
         bar.setSpacing(20);
         content.getChildren().addAll(imgStack, info);
         return new VBox(10, bar, content);
+    }
+
+    private Node buildPriceChart(CardImports imp) {
+        CategoryAxis x = new CategoryAxis();
+        x.setTickLabelRotation(-60);
+
+        NumberAxis y = new NumberAxis();
+        y.setForceZeroInRange(false);
+
+        LineChart<String, Number> chart = new LineChart<>(x, y);
+        chart.setCreateSymbols(false);
+        chart.setAnimated(false);
+        chart.setPrefSize(720, 380);
+
+        CardImports.Match m = imp.getBestMatch();
+        if (m == null || m.cardID() == null) {
+            chart.setTitle("No match to price");
+            return chart;
+        }
+
+        try{
+            FullCardSignature sig = new FullCardSignature(ctx.searchDB.signature(m.cardID()), settings.dbPath(), settings.cacheDir(), imp.getCardVersion(), imp.getFirstEdition());
+            var points  = PriceHistoryHelper.load(settings.cacheDir(), sig.getIdTCGP(), sig.getCardVersion());
+            if(points.isEmpty()){
+                chart.setTitle(sig.getName() + "– no price history");
+                return chart;
+            }
+            chart.setTitle(sig.getName() + " (" + sig.getCardVersion() + ")");
+            XYChart.Series<String, Number> market = new XYChart.Series<>(); market.setName("Market");
+            XYChart.Series<String, Number> mid    = new XYChart.Series<>(); mid.setName("Mid");
+            XYChart.Series<String, Number> low    = new XYChart.Series<>(); low.setName("Low");
+
+            for(var p : points){
+                String date = p.date().toString();
+                if (p.market() != 0.0f) market.getData().add(new XYChart.Data<>(date, p.market()));
+                if (p.mid() != 0.0f) mid.getData().add(new XYChart.Data<>(date, p.mid()));
+                if (p.low() != 0.0f) low.getData().add(new XYChart.Data<>(date, p.low()));
+            }
+            chart.getData().addAll(market, mid, low);
+        } catch (SQLException e) {
+            logger.error(e.getMessage());
+            showError(e);
+        }
+        return chart;
     }
 
     private Runnable getRender(CardImports imp, int size, Label orbLabel, Label hashLabel, Label ocrLabel, Label count, Button previous, Button next, int[] pos, ImageView image2, Label cardName, Label collectorNum, Label series, Label idTCGP, Label cardType, Label rarity, Label price, Label description) {
@@ -1036,7 +1069,7 @@ public final class App extends Application {
             FullCardSignature orbSig = null;
             switch(toggleMode){
                 case "ocr" -> orbSigVictim = ctx.searchDB.signature(imp.getOcrWinner().cardID());
-                case "default" -> orbSigVictim = ctx.searchDB.signature(imp.getBestMatch().cardID());
+                case "default", "price" -> orbSigVictim = ctx.searchDB.signature(imp.getBestMatch().cardID());
                 default -> orbSigVictim  = imp.getARecordRecord(p, toggleMode);
             }
             try {
@@ -1133,7 +1166,7 @@ public final class App extends Application {
                 Path p1 = (rowImp == null) ? null : rowImp.getQueryImage();
                 if(p1 != null && Files.exists(p1)){
                     Image thumb = new Image(p1.toUri().toString(), 120, 0, true, true, true);
-                    ImageView iv = new ImageView(thumb);;
+                    ImageView iv = new ImageView(thumb);
                     iv.setPreserveRatio(true);
                     iv.setFitHeight(130);
                     subCell.setGraphic(iv);
@@ -1194,6 +1227,10 @@ public final class App extends Application {
         else taskPopOver.show(statusProgress);
     }
 
+    private final ExecutorService taskExecutor = Executors.newThreadPerTaskExecutor(
+            Thread.ofVirtual().name("pokecard-task-", 0).factory()
+    );
+
     <T> void runTask(Task<T> task, String name, Consumer<T> onSuccess) {
         taskView.getTasks().add(task);
         if(!name.equals("noop")) logger.info("Starting task {}", name);// before starting the thread
@@ -1202,9 +1239,7 @@ public final class App extends Application {
             if(!name.equals("noop")) logger.info("Finished running {}", name);
         });
         task.setOnFailed(e -> showError(task.getException()));
-        Thread t = new Thread(task);
-        t.setDaemon(true);
-        t.start();
+        taskExecutor.submit(task);
     }
 
     private void finishTask(Task<?> task){
@@ -1262,21 +1297,17 @@ final class InitTask extends Task<App.AppContext>{
 
     @Override
     protected App.AppContext call() throws Exception {
-        logger.info("Pokecard v0.9.0.03\nby willtryon\n");
+        logger.info("Pokecard v0.9.0.04\nby willtryon\n");
         updateMessage("Loading...");
         if(!(Files.exists(Path.of(settings.dbPath().toUri())))){
-            updateMessage("Prepareing to clone database...");
+            updateMessage("Preparing to clone database...");
             gitUsage git = new gitUsage((msg, frac) -> {
                 updateMessage(msg);
                 updateProgress(frac, 1.0);
             });
             git.prepareGitProgress();
             git.clonePokedata();
-        }/*else{
-            updateMessage("Checking for updates...");
-            git.updatePokedata(App.appHome.resolve("pokedata").toFile());
-        }*/
-
+        }
         updateMessage("Running database tasks...");
         new dbCleanup((msg, frac) -> {
             updateMessage(msg);
@@ -1305,7 +1336,7 @@ final class InitTask extends Task<App.AppContext>{
         }
         updateMessage("Initializing searchDB...");
         updateProgress(1.0, 1.0);
-        CardSearchRepo searchDB = new CardSearchRepo(settings.dbPath(), cardDB);
+        CardSearchHelper searchDB = new CardSearchHelper(settings.dbPath(), cardDB);
         updateMessage("Starting...");
         CardImportsIndex importDB = cardDB.newImportsIndex();
         return new App.AppContext(cardDB, importDB, searchDB);
@@ -1561,6 +1592,7 @@ final class Finalize{
         cancelButton.setOnAction(e -> {
             stage.close();
         });
+        //TODO fix.
         propertiesButton.setOnAction(e -> {
             CardImports temp = listView.getSelectionModel().getSelectedItem();
             new ImportsProperties(stage, ctx, temp, settings, onReveal);
@@ -1603,8 +1635,8 @@ final class ImportsProperties{
 
     void buildEditor(Stage mainStage, CardImports selected) {
         Stage editor = new Stage();
-        editor.initModality(Modality.APPLICATION_MODAL);
-        editor.initOwner(mainStage);
+        //editor.initModality(Modality.APPLICATION_MODAL);
+        //editor.initOwner(mainStage);
         editor.setTitle("Editing "+selected.getQueryImage().getFileName());
         ObservableList<PropertySheet.Item> items = FXCollections.observableArrayList(
                 new ImportItem<>("Card", "Version", "Foiling / print variant",
